# logo-recogition

./: CMakeLists.txt  README.md
docs/: sprawozdanie.tex
include/: LogoRecognition.h
src/: LogoRecognition.cpp  main.cpp
